fixing mobile background cutoff; increasing appear delay

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -38,6 +38,10 @@ pre {
     animation: appear 2s;
 }
 
+.appear-3s {
+    animation: appear 3s;
+}
+
 @keyframes appear {
     0% { opacity: 0;}
     99% {opacity: 0;}
